Grace/tests/gibbs/errors/t135.grace
// ERROR = P1002
var . := 8
